RavenDB-21563 Fix z-index

--- a/src/Raven.Studio/wwwroot/Content/css/bootstrap/variables-body.less
+++ b/src/Raven.Studio/wwwroot/Content/css/bootstrap/variables-body.less
@@ -257,10 +257,11 @@
 
 @zindex-tooltip: @zindex-notification-center - 1;
 
-@zindex-navbar-fixed: 1075;
-@zindex-popover: 1070;
-@zindex-modal-background: 1076;
-@zindex-modal: 1080;
+@zindex-navbar-fixed: 1082;
+@zindex-topalert: 1083;
+@zindex-popover: 1081;
+@zindex-modal-background: 1084;
+@zindex-modal: 1085;
 @zindex-menu-xs: 1090;
 @zindex-loading-overlay: 2490;
 @zindex-processing-spinner: 2500;
