--- a/src/Raven.Studio/wwwroot/Content/css/pages/patch-global.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/patch-global.less
@@ -10,7 +10,7 @@
     
     .syntax-help {
         position: relative;
-        z-index: @zindex-modal;
+        z-index: 1081;
     }
 
     .shadow-style {
