--- a/src/Raven.Studio/wwwroot/Content/scss/bs5variables.scss
+++ b/src/Raven.Studio/wwwroot/Content/scss/bs5variables.scss
@@ -827,8 +827,8 @@ $zindex-selection-actions: 1035 !default;
 $zindex-modal-backdrop: 1040 !default;
 $zindex-offcanvas: 1050 !default;
 $zindex-modal: 1060 !default;
-$zindex-popover: 1076 !default;
-$zindex-tooltip: 1080 !default;
+$zindex-popover: 1081 !default;
+$zindex-tooltip: 1082 !default;
 // scss-docs-end zindex-stack
 
 // Navs
